# sema

./: .circuit_breaker_history  .circuit_breaker_state  .env.example  .exit_signals  .gitignore  .last-branch  .ralph_session  .ralph_session_history  .response_analysis  CONTRIBUTING.md  LICENSE  PROMPT.md  README.md  SECURITY.md  docker-compose.yml  main.py  prd.json  progress.json  progress.txt  pyproject.toml  ralph-prompt.md  ralph.sh  status.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/2026-06-30-fix-data-unification/: prd.json
eval/: dev_slice.yaml  dev_slice_poc.yaml  holdout.yaml
eval-runs/: end-to-end-diff.json  post-cleanup-diff.json  step2-diff.json  step2-report.json  step3-diff.json  step3-report.json  step4-diff.json  step4-report.json  step5-diff.json  step5-report.json  step5-v2-report.json  step6-milestone-summary.md  verify-diff.json
eval-runs/step2-baseline-single-pass/: mutation__baseline.json  patient__baseline.json  sample__baseline.json  timeline_sample_acquisition__baseline.json  timeline_status__baseline.json  timeline_treatment__baseline.json
eval-runs/step2-staged-zeroshot/: mutation__staged.json  mutation__staged__telemetry.json  patient__staged.json  patient__staged__telemetry.json  sample__staged.json  sample__staged__telemetry.json  timeline_sample_acquisition__staged.json  timeline_status__staged.json  (+4 more)
migrations/: 001_stored_in_to_has_value_set.cypher  002_backfill_null_scoped_study_edges.cypher
scripts/: check_engine_coupling.py  check_slice_contamination.py  embedding_smoke.py  migrate_cbioportal_to_namespaced.py  validate_study_scoping.py  verify_cross_study_collapse.py
tasks/: decision-slice0-omop-target.md  handoff-slice1-omop-shape-identity.md  plan-slice0-full-repoint.md  plan-slice1-omop-shape-identity.md  prd-data-unification-fixes.md  prd-sema-mapping-slice0.md
tests/: conftest.py
(+560 files in other folders)
