[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sema"
version = "0.1.0"
description = "Ontology extraction for knowledge graphs — semantic layer for GraphRAG"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "databricks-langchain>=0.5.0",
    "databricks-sdk>=0.30.0",
    "fastapi[standard]",
    "neo4j>=5.0.0",
    "databricks-sql-connector[pyarrow]>=3.0.0",
    "sqlglot>=25.0.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
sema = "sema.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external services required)",
    "integration: Integration tests (requires Neo4j)",
    "e2e: End-to-end tests (requires Neo4j, mocked Databricks and LLM)",
]
addopts = "-m unit"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "sentence_transformers.*",
    "databricks.*",
    "databricks.sdk.*",
    "databricks_langchain.*",
    "loguru.*",
    "sqlglot.*",
    "pyarrow",
    "pyarrow.*",
    "duckdb",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
]
